# MVA-master

./: .gitmodules  README.md
3D Computer Vision/: .gitignore
3D Computer Vision/Fundamental Matrix/: CMakeLists.txt  Fundamental.cpp  README.md
3D Computer Vision/Fundamental Matrix/Imagine/: Features.h  SIFT_VL.cpp
3D Computer Vision/Fundamental Matrix/Imagine/Features/: Feat.h  IO.h  SIFT.h
3D Computer Vision/Fundamental Matrix/Imagine/vl/: generic.c  generic.h  host.c  host.h  imop.c  imop.h  imop.tc  mathop.h  sift.c  sift.h
3D Computer Vision/Panorama/: CMakeLists.txt  Panorama.cpp  README.md
3D Computer Vision/Seeds/: CMakeLists.txt  Seeds.cpp
AudioSignalAnalysis/: README.md
AudioSignalAnalysis/TP_Effets_Reverb_MVA/: computeEarlyReverbs.m  computeEffectOutput.m  computeReverb.m  main.m
AudioSignalAnalysis/TP_modifications/: AnalysisPitchMarks.m  ChangeBothScales.m  ChangePitchScale.m  ChangeTimeScale.m  Synthesis.m  main.m  periode.m
Deep Learning/: README.md
Deep Learning/Computer Vision/: Deep Learning Intro.ipynb  README.md
Deep Learning/Natural Language Processing/: README.md
Deep Learning/Natural Language Processing/.ipynb_checkpoints/: nlp_project-checkpoint.ipynb
Deep Learning/Natural Language Processing/data/: README.md
Deep Learning/Reinforcement Learning/: DQN_project_MVA.ipynb
NLP/: README.md
NLP/SyntacticParsing/: README.md  TP4.ipynb  corpus_out.txt  parser.sh  script.py
NLP/TwitterNormalization/: .gitignore  README.md  TP3.ipynb  large.txt  run_system.py  run_system.sh
NLP/TwitterNormalization/Corpus/: README.md
(+1 files in other folders)
